hard-gists/6165747/run.log
=== Docker Run Log for 6165747 ===
Started at: Mi 29. Okt 16:23:42 CET 2025

[2025-10-29 16:23:43] START: Running container for 6165747
[2025-10-29 16:23:43] SUCCESS: Container 1f91896295cb5b84edd8fba6d543d2058a74d35c7ee773b45b8a5455cba05678 started for 6165747
=== Container logs for 6165747 ===
  File "/snippet.py", line 157
    print violation_max / violation_init
    ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
SyntaxError: Missing parentheses in call to 'print'. Did you mean print(...)?
=== End of logs for 6165747 ===
[2025-10-29 16:23:45] INFO: Container 1f91896295cb5b84edd8fba6d543d2058a74d35c7ee773b45b8a5455cba05678 has stopped
